[project]
name = "fraud-detection"
version = "0.1.0"
description = "Fraud detection baseline with CatBoost/LightGBM"
authors = [
    {name = "artemgladkov",email = "bboycap01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (==1.26.4)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "mlflow (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
ruff = "^0.12.12"
black = "^25.1.0"
mypy = "^1.17.1"
pre-commit = "^4.3.0"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
